--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,12 @@
 header {
-    background-color: yellow;
+    text-align: left;
+    margin:auto;
+}
+
+tbody{
+background: #f7eecd;
+}
+select{
+   border-radius: 5px ;
+ 
 }
