--- a/src/style.css
+++ b/src/style.css
@@ -1,37 +1,117 @@
-/**{
- margin: 0px;
- padding:0px;
- font-family: verdana;
-
-}
-divmenu{
-    position: absolute;
-    padding:170px;
-    height: 100%;
-    background-color:#2f3030;
-}
-
-div#logo-principal{
-    width: 40px;
-    height: 40px;
-    margin: 10px;
-    background-image: url();
-}*/
-
-header {
+body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 1px;
+   }
+  
+  @media screen and (max-width: 400px) {
+    .menu-lateral {
+      display: none;
+    }
+  }
+  
+  @media screen and (max-width: 400px) {
+    .elegir-data {
+      width: 100%;
+    }
+  }
+  
+  header {
+   text-align: center;
+   background-color: #FFFFFF;
+   padding: 15px;
+   border-bottom: 1px solid #333333;
+  }
+  
+  .header-image {
+    width: 180px; 
+    border-radius: 100px; 
+  }  
+  
+  main {
+    padding: 5px;
+  }
+  
+  aside {
+    background: #FFE521;
+    width: 20%;
+    font-size: 90%;
+    display: inline-block;
+    padding-bottom: 100px; 
+  }
+  
+  .vertical-menu a {
+      background-color: #eee;
+      color: #333333;
+      display: block;
+      padding: 10px;
+      text-decoration: none;
+  }
+  
+  aside button {
+    background-color: #FFFF;
+    padding: 5% 35%;
+    width: 100%;
+    display: block;
+    border:none;
+    margin-top:217px;
+  }
+  
+  button:hover {
+      background-color: #FFE521;
+  }
+  
+  #avatar {
+    width:60px;
+    height:60px;
+    border-radius:30px;
+    display:block;
+    margin:auto;
+  }
+  
+  #name-user {
     text-align: center;
-    padding: 50px;
-    background: rgb(248, 248, 155);
-}
-
-tbody{
-background: #f7eecd;
-margin:0;
-}
-select{
-   border-radius: 5px ;
- 
-}
-body{
-    margin:0;
-}
+    font-size: 80%;
+    padding: 10px;
+    margin:10px;
+  }
+  
+  section {
+    background: #FFE521;
+    width: 75%;
+    font-size: 100%;
+    display: inline-block;
+    vertical-align: top;
+  }
+  
+  p {
+    display: inline-block;
+  }
+  
+  select {
+    font-size: 100%;
+    display: inline-block;
+    border-radius: 5px;
+    height: 25px;
+    width: 180px;
+  }
+  
+  .output {
+    background: #eee9e9;
+    font-size: 90%;
+    display: inline-block;
+    width: 100%;
+    padding-bottom: 75%; 
+  }
+  
+  footer {
+    font-size: 70%;
+    text-align: center;
+    color: #FFFFFF;
+    border-top: 1px solid #000000;
+    padding: 10px; 
+    background: #333333;
+    position: fixed;
+    bottom: 0;
+    height: 4%;
+    width: 100%;
+  }
